--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Unix-errno
 
 {{$NEXT}}
     - make sure that string and value match in .gist
+    - removed debug code when trying to set errno
 
 0.0.1  2018-04-30T11:40:35+02:00
     - Initial version
